feat(core): add more variables
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -80,42 +80,47 @@ LABEL maintainer="Felipe Zipitria <felipe.zipitria@owasp.org>"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 ENV ACCESSLOG=/var/log/nginx/access.log \
-     BACKEND=http://localhost:80 \
-     DNS_SERVER= \
-     ERRORLOG=/var/log/nginx/error.log \
-     LOGLEVEL=warn \
-     METRICS_ALLOW_FROM='127.0.0.0/24' \
-     METRICS_DENY_FROM='all' \
-     METRICSLOG=/dev/null \
-     MODSEC_AUDIT_LOG_FORMAT=JSON \
-     MODSEC_AUDIT_LOG_TYPE=Serial \
-     MODSEC_AUDIT_LOG=/dev/stdout \
-     MODSEC_AUDIT_STORAGE=/var/log/modsecurity/audit/ \
-     MODSEC_DATA_DIR=/tmp/modsecurity/data \
-     MODSEC_DEBUG_LOG=/dev/null \
-     MODSEC_DEBUG_LOGLEVEL=0 \
-     MODSEC_PCRE_MATCH_LIMIT_RECURSION=100000 \
-     MODSEC_PCRE_MATCH_LIMIT=100000 \
-     MODSEC_REQ_BODY_ACCESS=on \
-     MODSEC_REQ_BODY_LIMIT=13107200 \
-     MODSEC_REQ_BODY_NOFILES_LIMIT=131072 \
-     MODSEC_RESP_BODY_ACCESS=on \
-     MODSEC_RESP_BODY_LIMIT=1048576 \
-     MODSEC_RESP_BODY_MIMETYPE="text/plain text/html text/xml" \
-     MODSEC_RULE_ENGINE=on \
-     MODSEC_TAG=modsecurity \
-     MODSEC_TMP_DIR=/tmp/modsecurity/tmp \
-     MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
-     PORT=80 \
-     PROXY_TIMEOUT=60s \
-     PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
-     PROXY_SSL_CERT=/etc/nginx/conf/server.crt \
-     PROXY_SSL_VERIFY=off \
-     SERVER_NAME=localhost \
-     SSL_PORT=443 \
-     TIMEOUT=60s \
-     WORKER_CONNECTIONS=1024 \
-     LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
+    BACKEND=http://localhost:80 \
+    DNS_SERVER= \
+    ERRORLOG=/var/log/nginx/error.log \
+    LOGLEVEL=warn \
+    METRICS_ALLOW_FROM='127.0.0.0/24' \
+    METRICS_DENY_FROM='all' \
+    METRICSLOG=/dev/null \
+    MODSEC_AUDIT_ENGINE="RelevantOnly" \
+    MODSEC_AUDIT_LOG_FORMAT=JSON \
+    MODSEC_AUDIT_LOG_TYPE=Serial \
+    MODSEC_AUDIT_LOG=/dev/stdout \
+    MODSEC_AUDIT_LOG_PARTS='ABIJDEFHZ' \
+    MODSEC_AUDIT_STORAGE=/var/log/modsecurity/audit/ \
+    MODSEC_DATA_DIR=/tmp/modsecurity/data \
+    MODSEC_DEBUG_LOG=/dev/null \
+    MODSEC_DEBUG_LOGLEVEL=0 \
+    MODSEC_DEFAULT_PHASE1_ACTION="phase:1,pass,log,tag:'\${MODSEC_TAG}'" \
+    MODSEC_DEFAULT_PHASE2_ACTION="phase:2,pass,log,tag:'\${MODSEC_TAG}'" \
+    MODSEC_PCRE_MATCH_LIMIT_RECURSION=100000 \
+    MODSEC_PCRE_MATCH_LIMIT=100000 \
+    MODSEC_REQ_BODY_ACCESS=on \
+    MODSEC_REQ_BODY_LIMIT=13107200 \
+    MODSEC_REQ_BODY_NOFILES_LIMIT=131072 \
+    MODSEC_RESP_BODY_ACCESS=on \
+    MODSEC_RESP_BODY_LIMIT=1048576 \
+    MODSEC_RESP_BODY_MIMETYPE="text/plain text/html text/xml" \
+    MODSEC_RULE_ENGINE=on \
+    MODSEC_TAG=modsecurity \
+    MODSEC_TMP_DIR=/tmp/modsecurity/tmp \
+    MODSEC_TMP_SAVE_UPLOADED_FILES="on" \
+    MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
+    PORT=80 \
+    PROXY_TIMEOUT=60s \
+    PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
+    PROXY_SSL_CERT=/etc/nginx/conf/server.crt \
+    PROXY_SSL_VERIFY=off \
+    SERVER_NAME=localhost \
+    SSL_PORT=443 \
+    TIMEOUT=60s \
+    WORKER_CONNECTIONS=1024 \
+    LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
 
 RUN apt-get update \
      && apt-get install -y --no-install-recommends \
