--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -1,46 +1,34 @@
 # Original of the latest recommended version:
 # https://github.com/SpiderLabs/ModSecurity/blob/v3/master/modsecurity.conf-recommended
 
-SecAuditEngine RelevantOnly
+SecArgumentSeparator &
+SecAuditEngine ${MODSEC_AUDIT_ENGINE}
 SecAuditLog ${MODSEC_AUDIT_LOG}
 SecAuditLogFormat ${MODSEC_AUDIT_LOG_FORMAT}
-SecAuditLogParts ABIJDEFHZ
+SecAuditLogParts ${MODSEC_AUDIT_LOG_PARTS}
 SecAuditLogRelevantStatus "^(?:5|4(?!04))"
-SecAuditLogType ${MODSEC_AUDIT_LOG_TYPE}
 SecAuditLogStorageDir ${MODSEC_AUDIT_STORAGE}
-
-SecArgumentSeparator &
-
+SecAuditLogType ${MODSEC_AUDIT_LOG_TYPE}
 SecCookieFormat 0
-
 SecDataDir ${MODSEC_DATA_DIR}
-
 SecDebugLog ${MODSEC_DEBUG_LOG}
 SecDebugLogLevel ${MODSEC_DEBUG_LOGLEVEL}
-
-SecDefaultAction "phase:1,pass,log,tag:'${MODSEC_TAG}'"
-
+SecDefaultAction "${MODSEC_DEFAULT_PHASE1_ACTION}"
+SecDefaultAction "${MODSEC_DEFAULT_PHASE2_ACTION}"
 SecPcreMatchLimit ${MODSEC_PCRE_MATCH_LIMIT}
 SecPcreMatchLimitRecursion ${MODSEC_PCRE_MATCH_LIMIT_RECURSION}
-
 SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
 SecRequestBodyLimit ${MODSEC_REQ_BODY_LIMIT}
 SecRequestBodyLimitAction Reject
 SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
-
 SecResponseBodyAccess ${MODSEC_RESP_BODY_ACCESS}
 SecResponseBodyLimit ${MODSEC_RESP_BODY_LIMIT}
 SecResponseBodyLimitAction ProcessPartial
 SecResponseBodyMimeType ${MODSEC_RESP_BODY_MIMETYPE}
-
 SecRuleEngine ${MODSEC_RULE_ENGINE}
-
-SecStatusEngine On
-
+SecStatusEngine ${MODSEC_STATUS_ENGINE}
 SecTmpDir ${MODSEC_TMP_DIR}
-SecTmpSaveUploadedFiles on
-
+SecTmpSaveUploadedFiles ${MODSEC_TMP_SAVE_UPLOADED_FILES}
 SecUnicodeMapFile unicode.mapping 20127
-
 SecUploadDir ${MODSEC_UPLOAD_DIR}
 SecUploadFileMode 0644
