fix(ci): show logs to help visualize errors in GHA
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/.github/workflows/verifyimage.yml
+++ b/.github/workflows/verifyimage.yml
@@ -23,7 +23,9 @@ jobs:
       run: docker build . -f ${{ matrix.image }}/Dockerfile${{ matrix.variant }} --tag test
 
     - name: Run ${{ matrix.image }}${{ matrix.variant }}
-      run: docker run -d --name ${{ matrix.image }}${{ matrix.variant }} test
+      run: |
+        docker run -d --name ${{ matrix.image }}${{ matrix.variant }} test
+        docker logs ${{ matrix.image }}${{ matrix.variant }}
 
     - name: Verify ${{ matrix.image }}${{ matrix.variant }}
       run: |
