--- a/v2-apache/Dockerfile-alpine
+++ b/v2-apache/Dockerfile-alpine
@@ -1,7 +1,6 @@
 FROM httpd:2.4-alpine as build
 
-ARG MODSEC_VERSION
-ENV MODSEC_VERSION="${MODSEC_VERSION:-2.9.3}"
+ARG MODSEC_VERSION=2.9.3
 
 # see https://httpd.apache.org/docs/2.4/install.html#requirements
 RUN set -eux; \
@@ -62,8 +61,7 @@ RUN openssl req -x509 -days 365 -new \
 
 FROM httpd:2.4-alpine
 
-ARG MODSEC_VERSION
-ENV MODSEC_VERSION="${MODSEC_VERSION:-2.9.3}"
+ARG MODSEC_VERSION=2.9.3
 
 LABEL maintainer="Felipe Zipitria <felipe.zipitria@owasp.org>"
 
