--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,8 +1,10 @@
 name: Build images for Docker Hub
-on: 
+on:
   push:
+    branches:
+      - master
   schedule:
-  - cron: '0 12 * * MON'  # Run every Monday
+    - cron: "0 12 * * MON" # Run every Monday
 
 jobs:
   build:
@@ -10,30 +12,43 @@ jobs:
     strategy:
       matrix:
         image:
-          - v2-apache
-          - v3-nginx
+          - apache
+          - nginx
         variant:
           - ""
           - "-alpine"
-
+        platform:
+          - linux/amd64
+          - linux/i386
+          - linux/arm64
+          - linux/arm/v7
     steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
 
-    - name: Build ${{ matrix.image }}${{ matrix.variant }}
-      run: docker build . -f ${{ matrix.image }}/Dockerfile${{ matrix.variant }}
-           --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -v ${{ matrix.variant }})
-           --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -vv ${{ matrix.variant }})
-           --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -vvv ${{ matrix.variant }})
-           --tag owasp/modsecurity:$(./version.sh ${{ matrix.image }} -vvvv ${{ matrix.variant }})
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-    - uses: azure/docker-login@v1
-      if: github.ref == 'refs/heads/master'
-      with:
-        username: ${{ secrets.dockerhub_user }}
-        password: ${{ secrets.dockerhub_token }}
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
 
-    - name: Push ${{ matrix.image }}${{ matrix.variant }}
-      if: github.ref == 'refs/heads/master'
-      run: docker push --all-tags owasp/modsecurity
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.dockerhub_user }}
+          password: ${{ secrets.dockerhub_token }}
+
+      - name: Build and push ${{ matrix.image }}${{ matrix.variant }} - ${{ matrix.platform }}
+        uses: docker/bake-action@v1.5.0
+        with:
+          targets: ${{ matrix.image }}${{ matrix.variant }}
+          files: docker-bake.hcl
+          set: |
+            ${{ matrix.image }}${{ matrix.variant }}.platform=${{ matrix.platform }}
+          push: true
