--- a/.github/workflows/verifyimage.yml
+++ b/.github/workflows/verifyimage.yml
@@ -2,31 +2,61 @@ name: Verify Images
 on:
   pull_request:
     branches:
-    - master
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         image:
-          - v2-apache
-          - v3-nginx
+          - apache
+          - nginx
         variant:
           - ""
           - "-alpine"
+        platform:
+          - linux/amd64
+          - linux/i386
+          - linux/arm64
+          - linux/arm/v7
     steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
 
-    - name: Build ${{ matrix.image }}${{ matrix.variant }}
-      run: docker build . -f ${{ matrix.image }}/Dockerfile${{ matrix.variant }} --tag test
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-    - name: Run ${{ matrix.image }}${{ matrix.variant }}
-      run: |
-        docker run -d --name ${{ matrix.image }}${{ matrix.variant }} test
-        docker logs ${{ matrix.image }}${{ matrix.variant }}
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
 
-    - name: Verify ${{ matrix.image }}${{ matrix.variant }}
-      run: |
-        [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }} --format='{{.State.Running}}') = 'true' ]
+      - name: Docker meta
+        uses: docker/metadata-action@v3
+        id: meta
+        with:
+          images: owasp/modsecurity
+
+      - name: Build ${{ matrix.image }}${{ matrix.variant }} - ${{ matrix.platform }}
+        uses: docker/bake-action@v1.5.0
+        with:
+          files: docker-bake.hcl
+          targets: ${{ matrix.image }}${{ matrix.variant }}
+          set: |
+            "${{ matrix.image }}${{ matrix.variant }}.tags=${{ matrix.image }}${{ matrix.variant }}/test"
+            "${{ matrix.image }}${{ matrix.variant }}.platform=${{ matrix.platform }}"
+          load: true
+          push: false
+
+      - name: Run ${{ matrix.image }}${{ matrix.variant }}
+        run: |
+          docker run -d --name ${{ matrix.image }}${{ matrix.variant }}-test ${{ matrix.image }}${{ matrix.variant }}/test
+          docker logs ${{ matrix.image }}${{ matrix.variant }}-test
+
+      - name: Verify ${{ matrix.image }}${{ matrix.variant }}
+        run: |
+          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{.State.Running}}') = 'true' ]
