--- a/.github/workflows/verifyimage.yml
+++ b/.github/workflows/verifyimage.yml
@@ -14,11 +14,6 @@ jobs:
         variant:
           - ""
           - "-alpine"
-        platform:
-          - linux/amd64
-          - linux/i386
-          - linux/arm64
-          - linux/arm/v7
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -41,22 +36,12 @@ jobs:
         with:
           images: owasp/modsecurity
 
-      - name: Build ${{ matrix.image }}${{ matrix.variant }} - ${{ matrix.platform }}
+      - name: Build ${{ matrix.image }}${{ matrix.variant }}
         uses: docker/bake-action@v1.5.0
         with:
           files: docker-bake.hcl
           targets: ${{ matrix.image }}${{ matrix.variant }}
           set: |
             "${{ matrix.image }}${{ matrix.variant }}.tags=${{ matrix.image }}${{ matrix.variant }}/test"
-            "${{ matrix.image }}${{ matrix.variant }}.platform=${{ matrix.platform }}"
-          load: true
           push: false
 
-      - name: Run ${{ matrix.image }}${{ matrix.variant }}
-        run: |
-          docker run -d --name ${{ matrix.image }}${{ matrix.variant }}-test ${{ matrix.image }}${{ matrix.variant }}/test
-          docker logs ${{ matrix.image }}${{ matrix.variant }}-test
-
-      - name: Verify ${{ matrix.image }}${{ matrix.variant }}
-        run: |
-          [ $(docker inspect ${{ matrix.image }}${{ matrix.variant }}-test --format='{{.State.Running}}') = 'true' ]
