--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -126,7 +126,8 @@ RUN apk add --no-cache \
     tzdata \
     yajl && \
     mkdir /etc/nginx/ssl/ && \
-    chown -R nginx:nginx /usr/share/nginx
+    mkdir -p /tmp/modsecurity/{data,upload,tmp} && \
+    chown -R nginx:nginx /usr/share/nginx /tmp/modsecurity
 
 COPY --from=build /usr/local/modsecurity/ /usr/local/modsecurity/
 COPY --from=build /usr/local/lib/ /usr/local/lib/
