--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -111,7 +111,8 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir -p /etc/modsecurity.d/ \
-    && mkdir -p /tmp/modsecurity/{data,upload,tmp} \
+    && bash -c 'mkdir -p /tmp/modsecurity/{data,upload,tmp}' \
+    && chown -R www-data /tmp/modsecurity \
     && mkdir -p /var/log/apache2/
 
 COPY --from=build /usr/local/apache2/modules/mod_security2.so                  /usr/local/apache2/modules/mod_security2.so
