fix(cve): add variable for configuring SecRequestBodyJsonDepthLimit
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -17,6 +17,7 @@ SecPcreMatchLimit ${MODSEC_PCRE_MATCH_LIMIT}
 SecPcreMatchLimitRecursion ${MODSEC_PCRE_MATCH_LIMIT_RECURSION}
 SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
 SecRequestBodyLimit ${MODSEC_REQ_BODY_LIMIT}
+SecRequestBodyJsonDepthLimit ${MODSEC_REQ_BODY_JSON_DEPTH_LIMIT}
 SecRequestBodyLimitAction Reject
 SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
 SecResponseBodyAccess ${MODSEC_RESP_BODY_ACCESS}
