--- a/v2-apache/Dockerfile-alpine
+++ b/v2-apache/Dockerfile-alpine
@@ -97,6 +97,7 @@ ENV ACCESSLOG=/var/log/apache2/access.log \
     MODSEC_PCRE_MATCH_LIMIT=500000 \
     MODSEC_REQ_BODY_ACCESS=on \
     MODSEC_REQ_BODY_LIMIT=13107200 \
+    MODSEC_REQ_BODY_JSON_DEPTH_LIMIT=512 \
     MODSEC_REQ_BODY_NOFILES_LIMIT=131072 \
     MODSEC_RESP_BODY_ACCESS=on \
     MODSEC_RESP_BODY_LIMIT=1048576 \
