--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -18,11 +18,11 @@ SecPcreMatchLimitRecursion ${MODSEC_PCRE_MATCH_LIMIT_RECURSION}
 SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
 SecRequestBodyLimit ${MODSEC_REQ_BODY_LIMIT}
 SecRequestBodyJsonDepthLimit ${MODSEC_REQ_BODY_JSON_DEPTH_LIMIT}
-SecRequestBodyLimitAction Reject
+SecRequestBodyLimitAction ${MODSEC_REQ_BODY_LIMIT_ACTION}
 SecRequestBodyNoFilesLimit ${MODSEC_REQ_BODY_NOFILES_LIMIT}
 SecResponseBodyAccess ${MODSEC_RESP_BODY_ACCESS}
 SecResponseBodyLimit ${MODSEC_RESP_BODY_LIMIT}
-SecResponseBodyLimitAction ProcessPartial
+SecResponseBodyLimitAction ${MODSEC_RESP_BODY_LIMIT_ACTION}
 SecResponseBodyMimeType ${MODSEC_RESP_BODY_MIMETYPE}
 SecRuleEngine ${MODSEC_RULE_ENGINE}
 SecTmpDir ${MODSEC_TMP_DIR}
