updating nginx with default ssl setting to meet mozilla ssl configurator intermediate level

--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -73,6 +73,11 @@ RUN openssl req -x509 -days 365 -new \
     -keyout /usr/share/TLS/server.key \
     -out /usr/share/TLS/server.crt
 
+# Generate Diffie-Hellman parameter files
+RUN openssl dhparam -out /usr/share/TLS/dhparam-1024.pem 1024
+RUN openssl dhparam -out /usr/share/TLS/dhparam-2048.pem 2048
+RUN openssl dhparam -out /usr/share/TLS/dhparam-4096.pem 4096
+
 FROM nginx:${NGINX_VERSION}-alpine
 
 ARG MODSEC_VERSION=3.0.6 \
@@ -118,12 +123,14 @@ ENV ACCESSLOG=/var/log/nginx/access.log \
     MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
     PORT=80 \
     PROXY_TIMEOUT=60s \
-    PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
     PROXY_SSL_CERT=/etc/nginx/conf/server.crt \
-    PROXY_SSL_CIPHERS="ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS" \
-    PROXY_SSL_PREFER_CIPHERS=on \
-    PROXY_SSL_PROTOCOLS="TLSv1 TLSv1.1 TLSv1.2" \
+    PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
+    PROXY_SSL_DH_BITS=2048 \
+    PROXY_SSL_PROTOCOLS="TLSv1.2 TLSv1.3" \
+    PROXY_SSL_CIPHERS="ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;" \
+    PROXY_SSL_PREFER_CIPHERS=off \
     PROXY_SSL_VERIFY=off \
+    PROXY_SSL_OCSP_STAPLING=off \
     SERVER_NAME=localhost \
     SSL_PORT=443 \
     TIMEOUT=60s \
@@ -151,6 +158,7 @@ COPY --from=build /usr/local/lib/libfuzzy.so.${FUZZY_VERSION} /usr/local/lib/
 COPY --from=build /etc/nginx/modules/ngx_http_modsecurity_module.so /etc/nginx/modules/ngx_http_modsecurity_module.so 
 COPY --from=build /usr/share/TLS/server.key /etc/nginx/conf/server.key
 COPY --from=build /usr/share/TLS/server.crt /etc/nginx/conf/server.crt
+COPY --from=build /usr/share/TLS/dhparam-* /etc/ssl/certs/
 COPY --from=build /etc/modsecurity.d/unicode.mapping /etc/modsecurity.d/unicode.mapping
 COPY --from=build /etc/modsecurity.d/modsecurity.conf /etc/modsecurity.d/modsecurity.conf
 COPY src/etc/modsecurity.d/*.conf /etc/modsecurity.d/
