--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -6,9 +6,16 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
+    listen  ${PORT} default_server;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
 
     listen ${SSL_PORT} ssl;
-    listen ${PORT};
 
     resolver ${DNS_SERVER} valid=5s;
     server_name ${SERVER_NAME};
@@ -16,10 +23,25 @@ server {
 
     ssl_certificate ${PROXY_SSL_CERT};
     ssl_certificate_key ${PROXY_SSL_CERT_KEY};
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:MozSSL:10m;
+    ssl_session_tickets off;
+
+    ssl_dhparam /etc/ssl/certs/dhparam-{PROXY_SSL_DH_BITS}.pem;
+
+    ssl_protocols ${PROXY_SSL_PROTOCOLS};
     ssl_ciphers ${PROXY_SSL_CIPHERS};
     ssl_prefer_server_ciphers ${PROXY_SSL_PREFER_CIPHERS};
-    ssl_protocols ${PROXY_SSL_PROTOCOLS};
+
+    ssl_stapling ${PROXY_SSL_OCSP_STAPLING};
+    ssl_stapling_verify {PROXY_SSL_OCSP_STAPLING};
+
     ssl_verify_client ${PROXY_SSL_VERIFY};
+
+    add_header Strict-Transport-Security "max-age=63072000" always;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block"
 
     location / {
         client_max_body_size 0;
