--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -27,21 +27,21 @@ server {
     ssl_session_cache shared:MozSSL:10m;
     ssl_session_tickets off;
 
-    ssl_dhparam /etc/ssl/certs/dhparam-{PROXY_SSL_DH_BITS}.pem;
+    ssl_dhparam /etc/ssl/certs/dhparam-${PROXY_SSL_DH_BITS}.pem;
 
     ssl_protocols ${PROXY_SSL_PROTOCOLS};
     ssl_ciphers ${PROXY_SSL_CIPHERS};
     ssl_prefer_server_ciphers ${PROXY_SSL_PREFER_CIPHERS};
 
     ssl_stapling ${PROXY_SSL_OCSP_STAPLING};
-    ssl_stapling_verify {PROXY_SSL_OCSP_STAPLING};
+    ssl_stapling_verify ${PROXY_SSL_OCSP_STAPLING};
 
     ssl_verify_client ${PROXY_SSL_VERIFY};
 
     add_header Strict-Transport-Security "max-age=63072000" always;
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block"
+    add_header X-XSS-Protection "1; mode=block";
 
     location / {
         client_max_body_size 0;
