feat(apache): enhance TLS settings
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -111,6 +111,13 @@ ENV ACCESSLOG=/var/log/apache2/access.log \
     SERVER_NAME=localhost \
     SSL_ENGINE=on \
     SSL_PORT=443 \
+    SSL_PROTOCOL="all -SSLv3 -TLSv1 -TLSv1.1" \
+    SSL_PROXY_PROTOCOL="all -SSLv3 -TLSv1 -TLSv1.1" \
+    SSL_SESSION_TICKETS=off \
+    SSL_USE_STAPLING=On \
+    SSL_CIPHER_SUITE="ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384" \
+    SSL_PROXY_CIPHER_SUITE="ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384" \
+    SSL_HONOR_CIPHER_ORDER=off \
     TIMEOUT=60 \
     WORKER_CONNECTIONS=400
 
