--- a/v2-apache/conf/extra/httpd-ssl.conf
+++ b/v2-apache/conf/extra/httpd-ssl.conf
@@ -1,14 +1,17 @@
-Listen ${SSL_PORT}
+Listen                  ${SSL_PORT}
 
-SSLCipherSuite HIGH:MEDIUM:!MD5:!RC4:!3DES
-SSLProxyCipherSuite HIGH:MEDIUM:!MD5:!RC4:!3DES
+SSLProxyProtocol        ${SSL_PROXY_PROTOCOL}
+SSLProxyCipherSuite     ${SSL_PROXY_CIPHER_SUITE}
 
-SSLHonorCipherOrder on
+SSLPassPhraseDialog     builtin
 
-SSLProtocol all -SSLv3
-SSLProxyProtocol all -SSLv3
+SSLProtocol             ${SSL_PROTOCOL}
+SSLCipherSuite          ${SSL_CIPHER_SUITE}
+SSLHonorCipherOrder     ${SSL_HONOR_CIPHER_ORDER}
+SSLSessionTickets       ${SSL_SESSION_TICKETS}
 
-SSLPassPhraseDialog  builtin
+SSLUseStapling          ${SSL_USE_STAPLING}
+SSLStaplingCache        "shmcb:logs/ssl_stapling(32768)"
 
-SSLSessionCache        "shmcb:/usr/local/apache2/logs/ssl_scache(512000)"
+SSLSessionCache         "shmcb:logs/ssl_scache(512000)"
 SSLSessionCacheTimeout  300
