--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -6,15 +6,31 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen  ${PORT} default_server;
+    listen ${PORT} default_server;
+
+    resolver ${DNS_SERVER} valid=5s;
+    server_name ${SERVER_NAME};
+    set $upstream ${BACKEND};
+    set $always_redirect ${NGINX_ALWAYS_TLS_REDIRECT};
 
     location / {
-        return 301 https://$host$request_uri;
+        client_max_body_size 0;
+
+        if ($always_redirect = on) {
+            return 301 https://$host$request_uri;
+        }
+
+        include includes/proxy_backend.conf;
+
+        index index.html index.htm;
+        root /usr/share/nginx/html;
     }
+
+    include includes/location_common.conf;
+
 }
 
 server {
-
     listen ${SSL_PORT} ssl;
 
     resolver ${DNS_SERVER} valid=5s;
@@ -41,44 +57,11 @@ server {
     location / {
         client_max_body_size 0;
 
-        proxy_set_header Host $host;
-        proxy_set_header Proxy "";
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_connect_timeout ${PROXY_TIMEOUT};
-        proxy_read_timeout 36000s;
-        proxy_redirect off;
-
-        proxy_pass_header Authorization;
-        proxy_pass $upstream;
+        include includes/proxy_backend.conf;
 
         index index.html index.htm;
         root /usr/share/nginx/html;
     }
 
-    location /healthz {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 "OK";
-    }
-
-    location /metrics/nginx {
-        access_log off;
-        allow ${METRICS_ALLOW_FROM};
-        deny ${METRICS_DENY_FROM};
-        proxy_store off;
-        stub_status;
-    }
-
-    error_page 500 502 503 504  /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+    include includes/location_common.conf;
 }
