--- a/v2-apache/Dockerfile-alpine
+++ b/v2-apache/Dockerfile-alpine
@@ -124,6 +124,7 @@ ENV ACCESSLOG=/var/log/apache2/access.log \
     REQ_HEADER_FORWARDED_PROTO='https' \
     SERVER_ADMIN=root@localhost \
     SERVER_NAME=localhost \
+    APACHE_ALWAYS_TLS_REDIRECT=off \
     SSL_ENGINE=on \
     SSL_PORT=443 \
     SSL_PROTOCOL="all -SSLv3 -TLSv1 -TLSv1.1" \
