feat(status): add var to configure StatusEngine
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -25,6 +25,7 @@ SecResponseBodyLimit ${MODSEC_RESP_BODY_LIMIT}
 SecResponseBodyLimitAction ${MODSEC_RESP_BODY_LIMIT_ACTION}
 SecResponseBodyMimeType ${MODSEC_RESP_BODY_MIMETYPE}
 SecRuleEngine ${MODSEC_RULE_ENGINE}
+SecStatusEngine ${MODSEC_STATUS_ENGINE}
 SecTmpDir ${MODSEC_TMP_DIR}
 SecTmpSaveUploadedFiles ${MODSEC_TMP_SAVE_UPLOADED_FILES}
 SecUnicodeMapFile unicode.mapping 20127
