--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       BACKEND: http://backend  # https://httpbin.org
       PORT: "8080"
       SSL_PORT: "4443"
-      # DNS_SERVER: "8.8.8.8"
+      DNS_SERVER: "1.1.1.1"
       METRICS_ALLOW_FROM: all
     ports:
     - "8081:8080"
@@ -58,7 +58,7 @@ services:
       BACKEND: http://backend  # https://httpbin.org
       PORT: "8080"
       SSL_PORT: "4443"
-      # DNS_SERVER: "8.8.8.8"
+      DNS_SERVER: "1.1.1.1"
       METRICS_ALLOW_FROM: all
     ports:
     - "8081:8080"
