fix(dns): replace resolver using file
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/v3-nginx/templates/nginx.conf.template
+++ b/v3-nginx/templates/nginx.conf.template
@@ -13,6 +13,6 @@ http {
     keepalive_timeout ${TIMEOUT};
     sendfile on;
 
-    resolver ${DNS_SERVER} valid=5s;
+    resolver DNS_SERVER valid=5s;
     include /etc/nginx/conf.d/*.conf;
 }
