feat: add variables for configuring real_ip module
Add all three real_ip module configuration options for nginx as
environment variables.

--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -124,6 +124,9 @@ ENV ACCESSLOG=/var/log/nginx/access.log \
     MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
     PORT=80 \
     NGINX_ALWAYS_TLS_REDIRECT=off \
+    SET_REAL_IP_FROM="127.0.0.1,10.10.0.0/24" \
+    REAL_IP_HEADER="X-REAL-IP" \
+    REAL_IP_RECURSIVE="on" \
     PROXY_TIMEOUT=60s \
     PROXY_SSL_CERT=/etc/nginx/conf/server.crt \
     PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
