fixup! feat: add variables for configuring real_ip module

--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -124,7 +124,7 @@ ENV ACCESSLOG=/var/log/nginx/access.log \
     MODSEC_UPLOAD_DIR=/tmp/modsecurity/upload \
     PORT=80 \
     NGINX_ALWAYS_TLS_REDIRECT=off \
-    SET_REAL_IP_FROM="127.0.0.1,10.10.0.0/24" \
+    SET_REAL_IP_FROM="127.0.0.1" \
     REAL_IP_HEADER="X-REAL-IP" \
     REAL_IP_RECURSIVE="on" \
     PROXY_TIMEOUT=60s \
