--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -1,4 +1,4 @@
-ARG NGINX_VERSION="1.22.0"
+ARG NGINX_VERSION="1.20.2"
 
 FROM nginx:${NGINX_VERSION}-alpine as build
 
@@ -29,7 +29,6 @@ RUN set -eux; \
         openssl-dev \
         pkgconfig \
         pcre-dev \
-        pcre2-dev \
         yajl-dev \
         zlib-dev
 
@@ -48,7 +47,7 @@ RUN set -eux; \
     ./build.sh; \
     git submodule init; \
     git submodule update; \
-    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip --with-pcre2; \
+    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip; \
     make install
 
 # We use master
